# iot-perusteet-tuntiharjoitus

./: CMakeLists.txt  LICENSE  README.md  io_exercise.c
